feat(either-mon): add functional error handling library
Sealed Either<L,R> with map/flatMap/fold/getOrElse.
DomainError interface (httpStatus + code) with base records:
NotFoundError(404), ForbiddenError(403), ConflictError(409),
UnauthorizedError(401), BadRequestError(400).
ValidationError + FieldViolation (field, code, params).
ConstraintViolationMapper: Set<ConstraintViolation> → ValidationError.
ErrorResponse unified record with @JsonInclude(NON_NULL) on violations.